<resources>
    <string name="app_name">Yasa Travels</string>
    <string name="page_title">Sign Up here !!!</string>
    <string name="profile_picture">Profile picture :</string>
    <string name="name">Name :</string>
    <string name="address">Address :</string>
    <string name="phone">Phone :</string>
    <string name="email">Email :</string>
    <string name="password">Password :</string>
    <string name="re_enter_password">Re-enter password :</string>
    <string name="signup">Sign Up</string>
    <string name="login">LogIn</string>

    <!--activity2 strings-->
    <string name="explore_button">Explore</string>
    <!--lorem text-->
    <string name="home_descrpton1">The Undiscovered Country   You might say Sri Lanka has been hiding in plain sight. Scores of travellers have passed overhead on their way to someplace else, but years of uncertainty kept Sri Lanka off many itineraries.  Now, however, all that has changed. The country is moving forward quickly as more and more people discover its myriad charms. Lying between the more trodden parts of India and Southeast Asia, Sri Lanka\'s history, culture and natural beauty are undeniably alluring. It\'s the place you haven\'t been to yet, that you should.</string>
    <string name="home_des2">So Much in So Little   Few places have as many Unesco World Heritage Sites (eight) packed into such a small area. Sri Lanka\'s 2000-plus years of culture can be discovered at ancient sites where legendary temples boast beautiful details even as they shelter in caves or perch on prominent peaks. More recent are evocative colonial fortresses, from Galle to Trincomalee.  Across the island, that thing that goes bump in the night might be an elephant heading to a favourite waterhole. Safari tours of Sri Lanka’s pleasantly relaxed national parks encounter leopards, water buffaloes, all manner of birds and a passel of primates.    It’s So Easy   Distances are short: see the sacred home of the world’s oldest living human-planted tree in the morning (Anuradhapura) and stand awestruck by the sight of hundreds of elephants gathering in the afternoon (Minneriya). Discover a favourite beach, meditate in a 2000-year-old temple, exchange smiles while strolling a mellow village, marvel at birds and wildflowers, try to keep count of the little dishes that come with your rice and curry. Wander past colonial gems in Colombo, then hit some epic surf.  Sri Lanka is spectacular, affordable and still often uncrowded. Now is the best time to discover it.</string>

    <string name="home_logout">Log Out</string>
    <string name="home_homeIcon">Home</string>
    <string name="home_profleIcon">Profile</string>
    <string name="home_contactUs">Contact Us</string>
    <string name="home_aboutUs">About Us</string>

    <!--user profile strings-->
    <!--lorem text-->
    <string name="user_name">Josh Fernando</string>
    <string name="user_phone">0719934085</string>
    <string name="user_email">jossyf@gmail.com</string>

    <string name="user_profileUpdate">Update Profile</string>
    <string name="user_profileDelete">Delete Profile</string>
    <string name="user_waterMark">Happy Travelling Josh !</string>

    <!--update profile strings-->
    <string name="user_saveProfileUpdates">Save Updates</string>

    <!--admin side add new vehicles strings-->
    <string name="vehicle_title">Add Vehicle</string>
    <string name="vehicle_addImage">Add Image</string>
    <string name="vehicle_type">Type :</string>
    <string name="vehicle_availableDistrict">District :</string>
    <string name="vehicle_driversName">Drivers\' Name :</string>
    <string name="vehicle_contact">Contact No :</string>
    <string name="vehicle_cost">Cost per 1km :</string>
    <string name="vehicle_saveBtn">Save Details</string>

    <!--update admin side vehicle strings-->
    <string name="vehicle_updateTitle">Update / Delete Vehicle</string>
    <string name="vehicle_updateImage">Update Image</string>
    <string name="vehicle_updateBtn">Save Updates</string>
    <string name="vehicle_deleteBtn">Delete Vehicle</string>

    <!--Cotact us strings-->
    <string name="contact_title">Get Contact Us !</string>
    <string name="contact_call">Call us on : 0711345678</string>
    <string name="caontact_mail">Send us emails via : yasatravels@gmail.com</string>
    <string name="contact_follow">Follow us on :</string>

    <!--About us strings-->
    <string name="about_title">About Us !</string>
    <string name="description1">We Yasa Travels here to help you out to plan your holyday, vacation, trip to somewhere. With this app you can easly contact with evailable hotels and vehecles. Also you can contact an experienced tour guide to join with you for flexible prices to explore in your journey more. </string>
    <string name="about_des2">copyrights@received</string>

    <!--Rides search Results user side strings-->
    <string name="searchResultsRTopic">Search results for Rides in "District_Name" </string>
    <string name="srRname">Car (T-002)</string>
    <string name="srRname2">Tuk-Tuk</string>
    <string name="srRdescription">FULLY INCLUSIVE PRICING-
Easy Payment Terms. Affordable Fully Inclusive Pricing. No Hidden Extras
    24 HOURS HOTLINE SUPPORT-
Reliable, Safe, Comfortable and Quality Service 24 Hours and 7 Days a Week
    </string>
    <string name="srRShortdes">Fast &amp; Safe. We offer the fast and most convenient taxi service promising complete customer satisfaction with each and every ride.</string>
    <string name="srRShortdes2">Ride Taxi offer Budget Taxi Service in Sri Lanka. We are the best solution for you to get around in Sri Lanka cheaply and safely.</string>
    <string name="contactBtn">Contact Us for Bookings..</string>
    <string name="submit">Submit</string>

    <!--Manage rides admin side strings-->
    <string name="car1">Saman Rent a cars</string>
    <string name="car1des">Owner: Saman Kumara  Tel:0773425637</string>
    <string name="car2">One-Key Cabs</string>
    <string name="car3">Shantha Rent a Cars</string>
    <string name="car4">Lanka TukTuks</string>
    <string name="car5">Nilu Cabs</string>
    <string name="topic2">Rides Management</string>

</resources>
